--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,3 +34,14 @@ body {
     color: #fff;
     font-size: 25px;
 }
+
+.category-icon {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 3px;
+}
+
+.category-name {
+    color: #878a8f;
+}
