--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -4,12 +4,12 @@
     <% @groups.each do |group| %>
       <div class="card mt-3 mb-1" style="width: 95%;">
         <div class="card-body d-flex">
-          <div class="w-25">
-            <img src=<%= group.icon %> class="category-icon" alt="category icon">
+          <div class="">
+            <img src=<%= group.icon %> class="category-icon me-2" alt="category icon">
           </div>
           <div class="w-75 d-flex justify-content-between align-items-center mx-2">
             <div class="d-flex flex-column justify-content-center">
-              <h5 class="card-title category-name"><%=group.name%></h5>
+              <%= link_to "#{group.name}", group_path(group.id), class:"card-title category-name fs-4 stretched-link" %>
               <p class="card-text mt-2"><small class="text-muted"><%=group.created_at.strftime("%d %b %Y")%></small></p>
             </div>
             <p class="card-text fw-semibold">$20</p>
