--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
  *= require_self
  */
 
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@600&display=swap");
+
 body {
     font-family: "Proxima Nova", sans-serif;
     color: #434b54;
@@ -29,6 +31,15 @@ body {
 
 .white-text {
     color: #f8f9fa;
+}
+
+.splash-screen {
+    height: 100vh;
+    background-image: url("https://i.pinimg.com/originals/c9/aa/5c/c9aa5cbf5a8a4afe806603be024d2f5e.jpg");
+}
+
+.splash-logo {
+    font-family: "Fira Code", monospace;
 }
 
 .menu-btn {
