--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,61 +13,70 @@
  *= require_tree .
  *= require_self
  */
-
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@600&display=swap");
 
 body {
-    font-family: "Proxima Nova", sans-serif;
-    color: #434b54;
+  font-family: "Proxima Nova", sans-serif;
+  color: #434b54;
 }
 
 .primary-color {
-    background: #3778c2;
+  background: #3778c2;
 }
 
 .green {
-    background: #5fb523;
+  background: #5fb523;
 }
 
 .white-text {
-    color: #f8f9fa;
+  color: #f8f9fa;
 }
 
 .splash-screen {
-    height: 100vh;
-    background-image: url("https://i.pinimg.com/originals/c9/aa/5c/c9aa5cbf5a8a4afe806603be024d2f5e.jpg");
+  height: 100vh;
+  background-image: url("https://i.pinimg.com/originals/c9/aa/5c/c9aa5cbf5a8a4afe806603be024d2f5e.jpg");
 }
 
 .splash-logo {
-    font-family: "Fira Code", monospace;
+  font-family: "Fira Code", monospace;
 }
 
 .menu-btn {
-    background-color: transparent;
-    border: none;
-    outline: none;
-    color: #fff;
-    font-size: 22px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: #fff;
+  font-size: 22px;
 }
 
 .fa-house {
-    color: #fff;
-    font-size: 18px;
-    margin-right: 8px;
+  color: #fff;
+  font-size: 18px;
+  margin-right: 8px;
 }
 
 .category-icon {
-    width: 80px;
-    height: 80px;
-    object-fit: cover;
-    border-radius: 3px;
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 3px;
 }
 
 .category-name {
-    color: #434b54;
-    text-decoration: none;
+  color: #434b54;
+  text-decoration: none;
 }
 
 .gray-text {
-    color: #434b54;
+  color: #434b54;
+}
+
+.btn-success {
+  background: #5fb523;
+  border-color: #5fb523;
+}
+
+.btn-primary {
+  background: #3778c2;
+  border-color: #3778c2;
 }
