--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,7 +27,7 @@
     </div>
 
     <div class="actions mt-3">
-      <%= f.submit "Sign up" ,class:"btn primary-color text-white mb-3"%>
+      <%= f.submit "Sign up" ,class:"btn btn-primary mb-3"%>
     </div>
   <% end %>
   <%= render "devise/shared/links" %>
