--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="collapse primary-color text-white" id="navbarToggleExternalContent">
   <div class="collapse navbar-collapse d-flex flex-column align-items-center" id="navbarTogglerDemo01">
-    <h1 class="navbar-brand fs-3 fw-semibold mt-4 mb-3">Budget Manager</h1>
+    <h1 class="navbar-brand fs-3 fw-semibold mt-4 mb-3">Money Penny</h1>
     <ul class="navbar-nav d-flex flex-column align-items-center me-auto mb-2 mb-lg-0 w-100">
       <li class="nav-item">
         <%= link_to "Categories", root_path, class: "nav-link active fs-6" %>
