--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,11 +1,13 @@
 <% if current_user %>
   <div class="container-fluid d-flex flex-column align-items-center">
-    <% unless @groups.empty? %>
+    <% if @groups.empty? %>
+      <h3 class="mt-4">You don't have any categories yet.</h3>
+    <% else %>
       <% @groups.each do |group| %>
         <div class="card mt-2 mb-1" style="width: 95%;">
           <div class="card-body d-flex">
             <div>
-              <img src=<%= group.icon %> class="category-icon me-2" alt="category icon">
+              <img alt="category icon" src=<%= group.icon %> class="category-icon me-2">
             </div>
             <div class="w-75 d-flex justify-content-between align-items-center mx-2">
               <div class="d-flex flex-column justify-content-center">
@@ -17,8 +19,6 @@
           </div>
         </div>
       <% end %>
-    <% else %>
-      <h3 class="mt-4">You don't have any categories yet.</h2>
     <% end %>
     <%= link_to 'Add a new category', new_group_path, class: "btn btn-success mt-5 py-2 px-5 text-white fs-5" %>
   </div>
